--- a/openatlas/templates/403.html
+++ b/openatlas/templates/403.html
@@ -1,11 +1,23 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}403 - Forbidden{% endblock %}
+{% block breadcrumb %}
+    403 - Forbidden
+{% endblock %}
 {% block content %}
 <div style="text-align:center;padding-top:1em;">
-	<p style="font-size:18px;">403 - Forbidden</p>
-    <p><img src="/images/layout/403.jpg" alt="" width="400" height="247"/></p>
-    <p>WRONG PARTY ... AGAIN</p>
-    <p>It seems you are not welcomed here.</p>
-    <p>Use the back button of your browser or click <a href="/">here</a> to go to the main page.</p>
+	<p style="font-size:18px;">
+        403 - Forbidden
+    </p>
+    <p>
+        <img src="/images/layout/403.jpg" alt="" width="400" height="247"/>
+    </p>
+    <p>
+        WRONG PARTY ... AGAIN
+    </p>
+    <p>
+        It seems you are not welcomed here.
+    </p>
+    <p>
+        Use the back button of your browser or click <a href="/">here</a> to go to the main page.
+    </p>
 </div>
 {% endblock %}
