--- a/openatlas/templates/404.html
+++ b/openatlas/templates/404.html
@@ -1,13 +1,23 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}404 - File not found{% endblock %}
+{% block breadcrumb %}
+    404 - File not found
+{% endblock %}
 {% block content %}
 <div style="text-align:center;padding-top:1em;">
-	<p style="font-size:18px;">404 - File not found</p>
+	<p style="font-size:18px;">
+        404 - File not found
+    </p>
 	<img src="/images/layout/404.jpg" alt="404" />
-    <p>We are so sorry!</p>
-	<p>We searched a long time but this document does not exist. Maybe you mistyped or followed a broken link.</p>
+    <p>
+        We are so sorry!
+    </p>
 	<p>
-        Use the back button of your browser or click <a href="/">here</a> to go to the main page.
+        We searched a long time but this document does not exist.
+        Maybe you mistyped or followed a broken link.
+    </p>
+	<p>
+        Use the back button of your browser or click
+        <a href="/">here</a> to go to the main page.
     </p>
 </div>
 {% endblock %}
