--- a/openatlas/templates/index/changelog.html
+++ b/openatlas/templates/index/changelog.html
@@ -1,12 +1,16 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a> >
-    {{ _('changelog')|uc_first }}
+    <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a>
+    > {{ _('changelog')|uc_first }}
 {% endblock %}
 {% block content %}
     {% for version_name, version in versions.items() %}
-        <div class="changelog-version">{{ _('version')|uc_first }} {{ version_name }}</div>
-        <div class="changelog-date">{{ version['date'] }}</div>
+        <div class="changelog-version">
+            {{ _('version')|uc_first }} {{ version_name }}
+        </div>
+        <div class="changelog-date">
+            {{ version['date'] }}
+        </div>
         <p>
             {% for issue_type, issues in version['data'].items() %}
                 {% for issue_number, issue_text in issues.items() %}
