--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a> >
-    {{ _('credits')|uc_first }}
+    <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a>
+    > {{ _('credits')|uc_first }}
 {% endblock %}
 {% block content %}
     <h1>Team</h1>
@@ -33,7 +33,8 @@
         <img src="/images/sponsors/logo_dpp.png" alt="DPP" />
     </a>
     <a target="_blank" href="http://homepage.univie.ac.at/stefan.eichert/gkn/">
-        <img src="/images/sponsors/logo_frontier.png" alt="Frontier, Contact Zone or No Man's Land" />
+        <img src="/images/sponsors/logo_frontier.png"
+             alt="Frontier, Contact Zone or No Man's Land" />
     </a>
     <br/><br/>
     <a target="_blank" href="http://www.oeaw.ac.at/en/austrian-academy-of-sciences/">
@@ -49,10 +50,12 @@
         <img src="/images/sponsors/logo_fwf.png" alt="FWF Austrian Science Fund" />
     </a>
     <a target="_blank" href="https://www.oeaw.ac.at/acdh">
-        <img src="/images/sponsors/logo_acdh.png" style="height:60px;" alt="ACDH - Austrian Centre for Digital Humanities" />
+        <img src="/images/sponsors/logo_acdh.png" style="height:60px;"
+             alt="ACDH - Austrian Centre for Digital Humanities" />
     </a>
     <p>
-        <a target="_blank" href="http://www.oeaw.ac.at/imafo/arbeitsgruppen/fruehmittelalter/projekte-historische-identitaetsforschung/einzelprojekte/ostalpenraum-revisited/">
+        <a target="_blank"
+           href="http://www.oeaw.ac.at/imafo/arbeitsgruppen/fruehmittelalter/projekte-historische-identitaetsforschung/einzelprojekte/ostalpenraum-revisited/">
             Ostalpenraum-revisited
         </a>
     </p>
