--- a/openatlas/templates/model/class_view.html
+++ b/openatlas/templates/model/class_view.html
@@ -1,18 +1,22 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('model_index') }}">{{ _('model')|uc_first }}</a> >
-    <a href="{{ url_for('class_index') }}">{{ _('classes')|uc_first }}</a> >
-    {{ class_.code }}
+    <a href="{{ url_for('model_index') }}">{{ _('model')|uc_first }}</a>
+    > <a href="{{ url_for('class_index') }}">{{ _('classes')|uc_first }}</a>
+    > {{ class_.code }}
 {% endblock %}
 {% block content %}
     <div style="float:left;padding-right:2em;">
-        <p><strong>{{ _('info')|uc_first }}</strong></p>
+        <p>
+            <strong>{{ _('info')|uc_first }}</strong>
+        </p>
         {{ data['info']|data_table }}
     </div>
     {% for name, table in tables.items() %}
         {% if table['data']|length > 0 %}
             <div style="float:left;padding-right:2em;">
-                <p><strong>{{ name|uc_first }}</strong></p>
+                <p>
+                    <strong>{{ name|uc_first }}</strong>
+                </p>
                 {{ tables[name]|pager }}
             </div>
         {% endif %}
@@ -20,6 +24,8 @@
     <div style="clear:both"></div>
     <div class="description">
         <strong>{{ _('description')|uc_first }}</strong>
-        <p>{{ class_.comment }}</p>
+        <p>
+            {{ class_.comment }}
+        </p>
     </div>
 {% endblock %}
