--- a/openatlas/templates/node/view.html
+++ b/openatlas/templates/node/view.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ _('hierarchy')|uc_first }}{% endblock %}
+{% block breadcrumb %}
+    {{ _('hierarchy')|uc_first }}
+{% endblock %}
 {% block content %}
     Sorry, but this feature is still in development.
 {% endblock %}
