--- a/openatlas/templates/actor/insert.html
+++ b/openatlas/templates/actor/insert.html
@@ -1,7 +1,8 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-     <a href="{{ url_for('actor_index') }}">{{ _('actor')|uc_first }}</a> > + {{ code|get_class_name }}
+    <a href="{{ url_for('actor_index') }}">{{ _('actor')|uc_first }}</a>
+    > + {{ code|get_class_name }}
 {% endblock %}
 {% block content %}
-     {{ form|display_form('Person', True if code=='E21' else False) }}
+    {{ form|display_form('Person', True if code=='E21' else False) }}
 {% endblock %}
