--- a/openatlas/templates/actor/update.html
+++ b/openatlas/templates/actor/update.html
@@ -1,8 +1,9 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-    <a href="{{ url_for('actor_index') }}">{{ _('actor')|uc_first }}</a> >
-    {{ actor|link }} > {{ _('edit')|uc_first }}
+    <a href="{{ url_for('actor_index') }}">{{ _('actor')|uc_first }}</a>
+    > {{ actor|link }}
+    > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
-     {{ form|display_form('', True if actor.class_.code=='E21' else False) }}
+    {{ form|display_form('', True if actor.class_.code=='E21' else False) }}
 {% endblock %}
