--- a/openatlas/templates/content/update.html
+++ b/openatlas/templates/content/update.html
@@ -12,6 +12,8 @@
             <p class="inverse-heading">{{ language|upper }}</p>
             {{ form[language](class='tinymce') }}<br />
         {% endfor %}
-        <p><button type="submit">{{ _('save')|uc_first }}</button></p>
+        <p>
+            <button type="submit">{{ _('save')|uc_first }}</button>
+        </p>
     </form>
 {% endblock %}
