--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -1,19 +1,25 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('event_index') }}">{{ _('event')|uc_first }}</a> >
-    {{ event.name }}
+    <a href="{{ url_for('event_index') }}">{{ _('event')|uc_first }}</a>
+    > {{ event.name }}
 {% endblock %}
 {% block content %}
 <div id="tabs" class="tabs-container">
     <ul>
-        <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
+        <li>
+            <a href="#tab-info">{{ _('info')|uc_first }}</a><
+            /li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
             {% if 'editor'|is_authorized and event.name != config['EVENT_ROOT_NAME']: %}
-                <a href="{{ url_for('event_update', id_=event.id) }}">{{ _('edit')|uc_first }}</a>
+                <a href="{{ url_for('event_update', id_=event.id) }}">
+                    {{ _('edit')|uc_first }}
+                </a>
                 <a onclick="return confirm('{{ _('delete')|uc_first }} {{ event.name.replace('\'', '') }}?')"
-                   href="{{ url_for('event_delete', id_=event.id) }}">{{ _('delete')|uc_first }}</a>
+                   href="{{ url_for('event_delete', id_=event.id) }}">
+                    {{ _('delete')|uc_first }}
+                </a>
             {% endif %}
             {{ event.id|bookmark_toggle }}
         </div>
