--- a/openatlas/templates/index/contact.html
+++ b/openatlas/templates/index/contact.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a> >
-    {{ _('contact')|uc_first }}
+    <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a>
+    > {{ _('contact')|uc_first }}
 {% endblock %}
 {% block content %}
     {{ contact|safe }}
