--- a/openatlas/templates/node/insert.html
+++ b/openatlas/templates/node/insert.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('node_index') }}">{{ _('hierarchy')|uc_first }}</a> > {{ root|link }} > +
+    <a href="{{ url_for('node_index') }}">{{ _('hierarchy')|uc_first }}</a>
+    > {{ root|link }}
+    > +
 {% endblock %}
 {% block content %}
     {{ form|display_form() }}
