--- a/openatlas/templates/reference/insert.html
+++ b/openatlas/templates/reference/insert.html
@@ -1,7 +1,8 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-     <a href="{{ url_for('reference_index') }}">{{ _('reference')|uc_first }}</a> > + {{ _(code)|uc_first }}
+    <a href="{{ url_for('reference_index') }}">{{ _('reference')|uc_first }}</a>
+    > + {{ _(code)|uc_first }}
 {% endblock %}
 {% block content %}
-     {% include 'reference/form.html' %}
+    {% include 'reference/form.html' %}
 {% endblock %}
