--- a/openatlas/templates/source/insert.html
+++ b/openatlas/templates/source/insert.html
@@ -1,7 +1,8 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-     <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a> > + {{ _('source')|uc_first }}
+    <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
+    > + {{ _('source')|uc_first }}
 {% endblock %}
 {% block content %}
-     {% include 'source/form.html' %}
+    {% include 'source/form.html' %}
 {% endblock %}
