--- a/openatlas/templates/source/update.html
+++ b/openatlas/templates/source/update.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-    <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a> >
-    {{ source|link }} >
-    {{ _('edit')|uc_first }}
+    <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
+    > {{ source|link }}
+    > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
-     {% include 'source/form.html' %}
+    {% include 'source/form.html' %}
 {% endblock %}
