--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -199,7 +199,12 @@ img.zoom {
     text-decoration: none;
 }
 
-#language-menu, #greeting {
+#language-menu {
+    float: right;
+    margin-top: 2em;
+}
+
+#greeting {
     float: right;
     margin-top: 1em;
 }
