--- a/openatlas/templates/source/update.html
+++ b/openatlas/templates/source/update.html
@@ -5,5 +5,5 @@
     > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
-    {% include 'source/form.html' %}
+    {{ form|display_form() }}
 {% endblock %}
