--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -7,8 +7,8 @@
 <div id="tabs" class="tabs-container">
     <ul>
         <li>
-            <a href="#tab-info">{{ _('info')|uc_first }}</a><
-            /li>
+            <a href="#tab-info">{{ _('info')|uc_first }}</a>
+        </li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
