Nodes for references

--- a/openatlas/templates/reference/insert.html
+++ b/openatlas/templates/reference/insert.html
@@ -4,5 +4,5 @@
     > + {{ _(code)|uc_first }}
 {% endblock %}
 {% block content %}
-    {% include 'reference/form.html' %}
+    {{ form|display_form() }}
 {% endblock %}
