--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% if 'editor'|is_authorized: %}
         <div class="button-bar">
-            <a href="{{ url_for('place_insert', code='E18') }}">+ {{ _('place')|uc_first }}</a>
+            <a href="{{ url_for('place_insert') }}">+ {{ _('place')|uc_first }}</a>
         </div>
     {% endif %}
     {{ tables['place']|pager }}
