--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -62,7 +62,7 @@
     <h1>Contributors</h1>
     <p>
         Bernhard Koschicek (DPP)<br />
-        Christof Rauchenberger (craws.net)<br />
+        Christof Rauchenberger<br />
         Johannes Preiser-Kapeller (MEDCON)<br />
         Katharina Winckler (DPP)<br />
         Mihailo Popović (DPP)<br />
