--- a/openatlas/templates/settings/update.html
+++ b/openatlas/templates/settings/update.html
@@ -20,6 +20,8 @@
         {% set data_mail = [
             (form.mail.label, form.mail),
             (form.mail_transport_username.label, form.mail_transport_username),
+            (form.mail_transport_password.label, form.mail_transport_password),
+            (form.mail_transport_password2.label, form.mail_transport_password2),
             (form.mail_transport_host.label, form.mail_transport_host),
             (form.mail_transport_port.label, form.mail_transport_port),
             (form.mail_transport_type.label, form.mail_transport_type),
