--- a/openatlas/templates/translation/update.html
+++ b/openatlas/templates/translation/update.html
@@ -1,7 +1,10 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
     <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
-    > {{ source.name }}
+    > {{ source|link }}
+    > {{ translation|link }}
+    > {{ _('update')|uc_first }}
 {% endblock %}
 {% block content %}
+    {{ form|display_form() }}
 {% endblock %}
