--- a/openatlas/templates/translation/view.html
+++ b/openatlas/templates/translation/view.html
@@ -11,7 +11,7 @@
             {{ _('edit')|uc_first }}
         </a>
         <a onclick="return confirm('{{ _('delete')|uc_first }} {{ translation.name.replace('\'', '') }}?')"
-           href="{{ url_for('translation_delete', id_=translation.id) }}">
+           href="{{ url_for('translation_delete', id_=translation.id, source_id=source.id) }}">
             {{ _('delete')|uc_first }}
         </a>
     {% endif %}
