--- a/openatlas/templates/place/update.html
+++ b/openatlas/templates/place/update.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
     <a href="{{ url_for('place_index') }}">{{ _('place')|uc_first }}</a>
-    > {{ place|link }}
+    > {{ object_|link }}
     > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
