Node interface continued

--- a/openatlas/templates/node/index.html
+++ b/openatlas/templates/node/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    {{ _('hierarchy')|uc_first }}
+    {{ _('node')|uc_first }}
 {% endblock %}
 {% block content %}
     <div id="tabs-menu" class="tabs-container">
